[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
partial_binary_merkle = { git = "https://github.com/pwang200/partial_binary_merkle.git", branch = "b_tree" }
k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "pem"] }
sha2 = "0.10.8"

#[dependencies.sha2]
#git = "https://github.com/risc0/RustCrypto-hashes"
#tag = "sha2-v0.10.6-risczero.0"

[dev-dependencies]
rand = "0.8.5"

#ed25519-dalek = { version = "2.1.1", features = ["serde", "signature", "batch", "digest"] }
#sha2 = "0.10.8"
